nxn/test/pass/001-001-001.nxn
// Return an integer value from main function

fn main() i32 {
    return 9;
}
