nxn/test/fail/001-001-001.nxn
fn main() i32 {
    return 9 // Error: Missing semicolon
}
